# alerting-platform

./: CONTRIBUTING.md  README.md  create_github_structure.py  demo.py  fix_github_simple.py  main.py  pyproject.toml  simple_interface.py  test_trigger.py
.github/workflows/: python-tests.yml  test.yml
config/: settings.py
data/: seed_data.py
docs/: setup.md
src/: init.py
src/api/: admin_api.py  analytics_api.py  init.py  user_api.py
src/models/: alert.py  init.py  notification.py  team.py  user.py
src/patterns/: init.py  observer.py  state.py
src/services/: alert_service.py  init.py  notification_service.py  scheduler.py
src/services/delivery/: base_delivery.py  delivery_factory.py  inapp_delivery.py  init.py
src/utils/: constants.py  init.py
tests/: init.py  test_api.py  test_integration.py  test_models.py  test_services.py
